--- a/index.html
+++ b/index.html
@@ -3,12 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>Challenge Five</title>
+    <script src="https://kit.fontawesome.com/9bebf550c3.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/normalize.css">
   </head>
   <body>
     <div id="sidebar">
       <ul>
         <li><a href="social">
-                <i class="fas fa-hashtag"></i></a></li>
+            <i class="fas fa-hashtag"></i></a></li>
         <li><a href="pictures">
             <i class="far fa-images"></i></a></li>
         <li><a href="about">
@@ -17,13 +20,41 @@
     </div>
     <div id="container">
       <div class="profile">
-        
+        <img src="images/profile" alt="profilepicture">
       </div>
       <div class="social">
-
+        <ul>
+          <li><a href="www.facebook.com/rodney.carrier16" target="_blank">
+              <i class="fab fa-facebook"></i></a></li>
+          <li><a href="www.github.com/welchdragonwebd@gmail.com" target="_blank">
+              <i class="fab fa-github"></i></a></li>
+          <li><a href="www.twitter.com/" target="_blank">
+              <i class="fab fa-twitter"></i></a></li>
+        </ul>
       </div>
       <div class="pictures">
-
+        <table>
+          <tr><th>Interesting times</th></tr>
+          <tr>
+            <td><img src="images/newyork.jpg" alt="NewYork" height="100px" width="100px"></td>
+            <td><h3>New York 2020</h3><p>Spent sometime in upstate NY visiting
+            my grandmother before leaving for South Dakota. She has a beautiful
+            400acre farm filled with many childhood memories.</p>
+          </tr>
+          <tr>
+            <td><img src="images/kayak.jpg" alt="kayak" height="100px" width="100px"></td>
+            <td><h3>Kayak Fishing During Covid</h3>
+                <p>During covid while in Florida one of my favorite activies was
+                   to go kayaking. My favorite place was guana river where I
+                   would go fishing. </td>
+          </tr>
+          <tr>
+            <td><img src="images/appalachian" alt="appalachian" target="_blank" height="100px" width="100px"></td>
+            <td><h3>Hiking with son</h3><p>This is a picture of my son and I
+              during our trip to the appalachian trail. We started in Georgia
+              and hiked towards North Carolina. We saw a blackbear on our way back.</td>
+          </tr>
+        </table>
       </div>
       <div class="about">
 
