--- a/index.html
+++ b/index.html
@@ -57,6 +57,10 @@
         </table>
       </div>
       <div class="about">
+        <h2>Why website was created</h2>
+        <p>This website was created in order to practice and develop my own
+        html & css skills. This site was developed in order to practice creating
+        navigation bars.</p>
 
       </div>
     </div>
