--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </div>
     <div id="container">
       <div class="profile">
-        <img src="images/profile" alt="profilepicture">
+        <img src="images/profile.jpg" alt="profilepicture" height="100px" width="100px">
       </div>
       <div class="social">
         <ul>
