prior to nav bar edit

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
     </div>
     <div id="container">
       <div class="profile">
-        <img src="images/profile.jpg" alt="profilepicture" height="100px" width="100px">
+        <h1>Hello, My name is Rodney.</h1>
+        <img src="images/profile.jpg" alt="profilepicture" height="200px" width="200px">
       </div>
       <div class="social">
         <ul>
@@ -34,24 +35,24 @@
       </div>
       <div class="pictures">
         <table>
-          <tr><th>Interesting times</th></tr>
+          <h2>Pictures of interesting parts of my life recently</h2>
           <tr>
-            <td><img src="images/newyork.jpg" alt="NewYork" height="100px" width="100px"></td>
+            <td><img src="images/newyork.jpg" alt="NewYork" height="300px" width="300px"</td>
             <td><h3>New York 2020</h3><p>Spent sometime in upstate NY visiting
             my grandmother before leaving for South Dakota. She has a beautiful
             400acre farm filled with many childhood memories.</p>
           </tr>
           <tr>
-            <td><img src="images/kayak.jpg" alt="kayak" height="100px" width="100px"></td>
+            <td><img src="images/kayak.jpg" alt="kayak" height="300px" width="300px"></td>
             <td><h3>Kayak Fishing During Covid</h3>
                 <p>During covid while in Florida one of my favorite activies was
                    to go kayaking. My favorite place was guana river where I
                    would go fishing. </td>
           </tr>
           <tr>
-            <td><img src="images/appalachian" alt="appalachian" target="_blank" height="100px" width="100px"></td>
-            <td><h3>Hiking with son</h3><p>This is a picture of my son and I
-              during our trip to the appalachian trail. We started in Georgia
+            <td><img src="images/apallachian.jpg" alt="appalachian" height="300px" width="300px"></td>
+            <td><h3>Hiking with son</h3><p>This is a picture of my son
+              during our trip on the appalachian trail. We started in Georgia
               and hiked towards North Carolina. We saw a blackbear on our way back.</td>
           </tr>
         </table>
