working nav bar initial

--- a/index.html
+++ b/index.html
@@ -10,40 +10,73 @@
   <body>
     <div id="sidebar">
       <ul>
-        <li><a href="social">
+        <li><h6>Profile</h6>
+          <br>
+          <a href="#profile">
+            <i class="fas fa-user"></i></a></li>
+        <li><h6>Social Links</h6>
+            <br>
+            <a href="#social">
             <i class="fas fa-hashtag"></i></a></li>
-        <li><a href="pictures">
+        <li><h6>Pictures</h6>
+            <br>
+            <a href="#pictures">
             <i class="far fa-images"></i></a></li>
-        <li><a href="about">
+        <li><h6>About Site</h6>
+            <br>
+            <a href="#about">
             <i class="fas fa-address-card"></i></a></li>
       </ul>
     </div>
     <div id="container">
       <div class="profile">
-        <h1>Hello, My name is Rodney.</h1>
-        <img src="images/profile.jpg" alt="profilepicture" height="200px" width="200px">
+        <h1><a name="profile">Hello, My name is Rodney.</a></h1>
+        <br>
+        <br>
+        <img src="images/profile.jpg" alt="profilepicture" height="250px" width="250px">
+        <br>
+        <br>
+        <p>Hello everyone. I am nurse, a husband, and an aspiring web developer.
+        <br>  I work on a reservation serving the Native American population. During,
+        <br>  my off hours I spend alot of my free time practicing my html and css
+          skills.</p>
       </div>
+      <br>
+      <br>
+      <br>
+      <br>
       <div class="social">
+        <h2><a name="social">Social Links</a></h2>
         <ul>
           <li><a href="www.facebook.com/rodney.carrier16" target="_blank">
               <i class="fab fa-facebook"></i></a></li>
+              <br>
+              <br>
           <li><a href="www.github.com/welchdragonwebd@gmail.com" target="_blank">
               <i class="fab fa-github"></i></a></li>
+              <br>
+              <br>
           <li><a href="www.twitter.com/" target="_blank">
               <i class="fab fa-twitter"></i></a></li>
+              <br>
+              <br>
         </ul>
       </div>
       <div class="pictures">
         <table>
-          <h2>Pictures of interesting parts of my life recently</h2>
+          <h2><a name="pictures">Pictures of interesting parts of my life recently</a></h2>
           <tr>
             <td><img src="images/newyork.jpg" alt="NewYork" height="300px" width="300px"</td>
+            <br>
+            <br>
             <td><h3>New York 2020</h3><p>Spent sometime in upstate NY visiting
             my grandmother before leaving for South Dakota. She has a beautiful
             400acre farm filled with many childhood memories.</p>
           </tr>
           <tr>
             <td><img src="images/kayak.jpg" alt="kayak" height="300px" width="300px"></td>
+            <br>
+            <br>
             <td><h3>Kayak Fishing During Covid</h3>
                 <p>During covid while in Florida one of my favorite activies was
                    to go kayaking. My favorite place was guana river where I
@@ -51,6 +84,8 @@
           </tr>
           <tr>
             <td><img src="images/apallachian.jpg" alt="appalachian" height="300px" width="300px"></td>
+            <br>
+            <br>
             <td><h3>Hiking with son</h3><p>This is a picture of my son
               during our trip on the appalachian trail. We started in Georgia
               and hiked towards North Carolina. We saw a blackbear on our way back.</td>
@@ -58,7 +93,7 @@
         </table>
       </div>
       <div class="about">
-        <h2>Why website was created</h2>
+        <h2><a name="about">Why website was created</a></h2>
         <p>This website was created in order to practice and develop my own
         html & css skills. This site was developed in order to practice creating
         navigation bars.</p>
