Facebook post version 1

--- a/index.html
+++ b/index.html
@@ -36,8 +36,10 @@
         <img src="images/profile.jpg" alt="profilepicture" height="250px" width="250px">
         <br>
         <br>
-        <p>Hello everyone. I am nurse, a husband, and an aspiring web developer.
+        <p>Hello everyone. I am nurse, a father, and an aspiring web developer.
+        <br>
         <br>  I work on a reservation serving the Native American population. During,
+        <br>
         <br>  my off hours I spend alot of my free time practicing my html and css
           skills.</p>
       </div>
@@ -48,15 +50,18 @@
       <div class="social">
         <h2><a name="social">Social Links</a></h2>
         <ul>
-          <li><a href="www.facebook.com/rodney.carrier16" target="_blank">
+          <li><h6>Facebook</h6>
+              <a href="www.facebook.com/rodney.carrier16" target="_blank">
               <i class="fab fa-facebook"></i></a></li>
               <br>
               <br>
-          <li><a href="www.github.com/welchdragonwebd@gmail.com" target="_blank">
+          <li><h6>Github</h6>
+              <a href="www.github.com/welchdragonwebd@gmail.com" target="_blank">
               <i class="fab fa-github"></i></a></li>
               <br>
               <br>
-          <li><a href="www.twitter.com/" target="_blank">
+          <li><h6>Twitter</h6>
+              <a href="www.twitter.com/" target="_blank">
               <i class="fab fa-twitter"></i></a></li>
               <br>
               <br>
